--- a/service-product/src/main/resources/application.properties
+++ b/service-product/src/main/resources/application.properties
@@ -1,2 +1,18 @@
 spring.application.name=service-product
 server.port=8080
+#spring.datasource.url=jdbc:mysql://localhost:3306/groceryApp
+#spring.datasource.username=root
+#spring.datasource.password=1234@password
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.datasource.url=jdbc:mysql://localhost:3306/groceryApp?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234@password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
