--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,11 +1,7 @@
 spring.application.name=api-gateway
 server.port=8765
 
-# Eureka client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-
-# Enable discovery-based routes in Gateway
-spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
-spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.cloud.gateway.httpclient.connect-timeout=10000
+spring.cloud.gateway.httpclient.response-timeout=10s
